Re-layout column selector panel, fix jitter and layout bugs

--- a/packages/perspective-viewer/src/less/computed_expression_widget.less
+++ b/packages/perspective-viewer/src/less/computed_expression_widget.less
@@ -12,9 +12,7 @@
 :host {
     display: none;
     flex-direction: column;
-    max-height: 35%;
-    margin-top: 34px;
-    margin-bottom: 24px;
+    margin-top: 12px;
     width: 100%;
 
     flex: 0 0 auto !important;
@@ -68,7 +66,7 @@
             display: flex;
             font-size: 12px;
             display: flex;
-            margin-left: 34px;
+            margin-left: 24px;
             margin-top: 3px;
             font-size: 12px;
             color: var(--color, @darkgray);
