--- a/packages/perspective-viewer/src/less/row.less
+++ b/packages/perspective-viewer/src/less/row.less
@@ -268,7 +268,7 @@
             --drop-target--animation,
             var(--row_draggable--animation, expand3 0.5s ease-out)
         );
-        border: var(--active--border, solid #1078d1) !important;
+        box-shadow: inset 0px 0px 0px 3px #1078d1 !important;
     }
 }
 
